--- a/bookmarks-tools-for-coder.html
+++ b/bookmarks-tools-for-coder.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 <head>
-<title>Vim</title>
+<title>开发相关工具书签</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="static/css/bootstrap.min.css" media="screen" rel="stylesheet" type='text/css'>
 <link href="static/css/bootswatch.min.css" rel="stylesheet" type='text/css'>
 <link href="static/css/style.css" rel="stylesheet" type="text/css" >
-<link rel="stylesheet" href="static/highlight/styles/solarized_big.css">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
@@ -39,35 +38,63 @@
 </div>
 <div class="container">
     <div class="page-header">
-        <h2>Vim</h2>
+        <h2>开发相关工具书签</h2>
     </div>
     <div class="bs-component">
         
 
-<h3 id="toc_0.0.1">插件</h3>
-<p>
-<a href="vimwiki.html">vimwiki</a>
-</p>
-
-<h3 id="toc_0.0.2">Tips</h3>
+<h4 id="toc_0.0.0.1">查看网页在不同设备上的显示效果</h4>
 <ul>
 <li>
-在以普通用户打开的 vim 中保存一个 root 用户文件<br/>
-    <code>:w !sudo tee %</code>
+<a href="http://www.responsinator.com">Responsinator</a>
 
 <li>
-Linux 编译参数
-<pre>
-./configure --with-features=huge \
-            --enable-rubyinterp \
-            --enable-pythoninterp \
-            --enable-cscope \
-            --enable-multibyte \
-            --enable-xim \
-            --enable-fontset \
-            --enable-gui=gtk2 \
-            --with-compiledby="Your Name"
-</pre>
+<a href="http://quirktools.com/screenfly">Screenfly</a>
+
+</ul>
+
+<h4 id="toc_0.0.0.2">网站测速</h4>
+<ul>
+<li>
+多种测试(http, ping, dns, trace)
+
+<ul>
+<li>
+<a href="http://alibench.com">阿里测</a> 不知道跟阿里巴巴有没有关系
+
+<li>
+<a href="http://17ce.com">17CE</a>
+
+</ul>
+<li>
+DNS
+
+<ul>
+<li>
+<a href="http://tools.fastweb.com.cn/index.php/Index/Mdig">快网工具</a> 线路非常多，可以指定线路
+
+<li>
+<a href="http://www.intodns.com/">intoDNS: checks DNS and mail servers health</a>
+
+</ul>
+</ul>
+
+<h4 id="toc_0.0.0.3">IP 相关</h4>
+<ul>
+<li>
+<a href="http://ip138.com">IP138</a>
+
+<li>
+<a href="http://ipseeker.cn/">界面很蹉的“IP地址探索者”</a>
+
+<li>
+新浪接口 <a href="http://int.dpool.sina.com.cn/iplookup/iplookup.php?format=js&amp;ip=1.1.1.1">http://int.dpool.sina.com.cn/iplookup/iplookup.php?format=js&amp;ip=1.1.1.1</a>
+
+<li>
+<a href="http://ip.taobao.com/">淘宝IP地址库</a>
+
+<li>
+<a href="http://tool.17mon.cn/">17MON网络工具集</a> <a href="http://tool.17mon.cn/ipgeo.php">IP 数据库分享计划</a>
 
 </ul>
 
@@ -84,16 +111,6 @@ Linux 编译参数
 </div>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="static/highlight/highlight.pack.js"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-  $('pre').each(function(i, e) {hljs.highlightBlock(e)});
-});
-hljs.configure({
-        languages: []
-})
-hljs.initHighlightingOnLoad();
-</script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
