--- a/iPhone.html
+++ b/iPhone.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 <head>
-<title>开发相关工具</title>
+<title>iPhone</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="static/css/bootstrap.min.css" media="screen" rel="stylesheet" type='text/css'>
@@ -38,65 +38,21 @@
 </div>
 <div class="container">
     <div class="page-header">
-        <h2>开发相关工具</h2>
+        <h2>iPhone</h2>
     </div>
     <div class="bs-component">
         
-
-<h4 id="toc_0.0.0.1">查看网页在不同设备上的显示效果</h4>
-<ul>
+<p>
+国行版本两大“致命”伤
+</p>
+<ol>
 <li>
-<a href="http://www.responsinator.com">Responsinator</a>
-
-<li>
-<a href="http://quirktools.com/screenfly">Screenfly</a>
-
-</ul>
-
-<h4 id="toc_0.0.0.2">网站测速</h4>
-<ul>
-<li>
-多种测试(http, ping, dns, trace)
-
-<ul>
-<li>
-<a href="http://alibench.com">阿里测</a> 不知道跟阿里巴巴有没有关系
+没有 Facetime Audio 功能
 
 <li>
-<a href="http://17ce.com">17CE</a>
+关不掉低电量提示音
 
-</ul>
-<li>
-DNS
-
-<ul>
-<li>
-<a href="http://tools.fastweb.com.cn/index.php/Index/Mdig">快网工具</a> 线路非常多，可以指定线路
-
-<li>
-<a href="http://www.intodns.com/">intoDNS: checks DNS and mail servers health</a>
-
-</ul>
-</ul>
-
-<h4 id="toc_0.0.0.3">IP 相关</h4>
-<ul>
-<li>
-<a href="http://ip138.com">IP138</a>
-
-<li>
-<a href="http://ipseeker.cn/">界面很蹉的“IP地址探索者”</a>
-
-<li>
-新浪接口 <a href="http://int.dpool.sina.com.cn/iplookup/iplookup.php?format=js&amp;ip=1.1.1.1">http://int.dpool.sina.com.cn/iplookup/iplookup.php?format=js&amp;ip=1.1.1.1</a>
-
-<li>
-<a href="http://ip.taobao.com/">淘宝IP地址库</a>
-
-<li>
-<a href="http://tool.17mon.cn/">17MON网络工具集</a> <a href="http://tool.17mon.cn/ipgeo.php">IP 数据库分享计划</a>
-
-</ul>
+</ol>
 
     </div>
     <footer>
@@ -111,5 +67,18 @@ DNS
 </div>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37422134-12']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
