--- a/Web.html
+++ b/Web.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 <head>
-<title>Vim</title>
+<title>Web</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="static/css/bootstrap.min.css" media="screen" rel="stylesheet" type='text/css'>
 <link href="static/css/bootswatch.min.css" rel="stylesheet" type='text/css'>
 <link href="static/css/style.css" rel="stylesheet" type="text/css" >
-<link rel="stylesheet" href="static/highlight/styles/solarized_big.css">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
@@ -39,37 +38,17 @@
 </div>
 <div class="container">
     <div class="page-header">
-        <h2>Vim</h2>
+        <h2>Web</h2>
     </div>
     <div class="bs-component">
         
-
-<h3 id="toc_0.0.1">插件</h3>
 <p>
-<a href="vimwiki.html">vimwiki</a>
+<a href="http://flukeout.github.io">学习 CSS 选择器的小游戏</a>
 </p>
 
-<h3 id="toc_0.0.2">Tips</h3>
-<ul>
-<li>
-在以普通用户打开的 vim 中保存一个 root 用户文件<br/>
-    <code>:w !sudo tee %</code>
-
-<li>
-Linux 编译参数
-<pre>
-./configure --with-features=huge \
-            --enable-rubyinterp \
-            --enable-pythoninterp \
-            --enable-cscope \
-            --enable-multibyte \
-            --enable-xim \
-            --enable-fontset \
-            --enable-gui=gtk2 \
-            --with-compiledby="Your Name"
-</pre>
-
-</ul>
+<p>
+<a href="http://zh.learnlayout.com/">学习 CSS 布局</a> 好像很不错的 CSS
+</p>
 
     </div>
     <footer>
@@ -84,16 +63,6 @@ Linux 编译参数
 </div>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="static/highlight/highlight.pack.js"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-  $('pre').each(function(i, e) {hljs.highlightBlock(e)});
-});
-hljs.configure({
-        languages: []
-})
-hljs.initHighlightingOnLoad();
-</script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
