--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
 
 </ul>
 
+<p>
+把所有文件在七牛放了一份，作为备份(镜像)，地址 <a href="http://noodles-wiki.qiniudn.com">http://noodles-wiki.qiniudn.com</a> 七牛的服务和他们送来的袜子、本子、键盘都很好。
 <hr />
+</p>
 
 <p>
 <strong>我还缺少一个 favicon</strong>
@@ -98,5 +101,18 @@
 </div>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37422134-12']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
