--- a/network-programming.html
+++ b/network-programming.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 <head>
-<title>Vim</title>
+<title>网络编程</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="static/css/bootstrap.min.css" media="screen" rel="stylesheet" type='text/css'>
 <link href="static/css/bootswatch.min.css" rel="stylesheet" type='text/css'>
 <link href="static/css/style.css" rel="stylesheet" type="text/css" >
-<link rel="stylesheet" href="static/highlight/styles/solarized_big.css">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
@@ -39,35 +38,36 @@
 </div>
 <div class="container">
     <div class="page-header">
-        <h2>Vim</h2>
+        <h2>网络编程</h2>
     </div>
     <div class="bs-component">
         
 
-<h3 id="toc_0.0.1">插件</h3>
+<h3 id="toc_0.0.1">UDP</h3>
 <p>
-<a href="vimwiki.html">vimwiki</a>
+<a href="https://www.knot-dns.cz">Knot DNS</a> 对 UDP 请求使用 <code>select</code>, <a href="https://www.nlnetlabs.nl/projects/nsd/">NSD</a> 实现了一个时间驱动库，这个库只使用了 <code>select</code>。
 </p>
 
-<h3 id="toc_0.0.2">Tips</h3>
+<p>
+一问一答式的 UDP 服务器只有很少的 socket 需要观察有没有新的请求，很可能只有一个接收、响应请求的 socket， 或者绑定了不止一个端口、服务器不止一张网卡，这时需要观察的 socket 会多于一个，但是绝不会太多，大于十个应该就是相当多的了。
+</p>
+
+<p>
+下图是 libevent 分别使用 <code>select</code>, <code>poll</code>, <code>epoll</code>, <code>kqueue</code> 的性能对比
+<img src="http://noodles-wiki.qiniudn.com/image/libevent-benchmark2.jpg" alt="libevent benchmark" style="max-width:100%" />
+</p>
+
+<p>
+有大量(大于 1000)的 socket 需要观察时，<code>epoll</code> 的性能绝对比 <code>select</code> 好很多，当要观察的 socket 很少时，就不是这样了，
+<code>epoll</code> 的实现比较复杂，这时使用 <code>select</code> 比使用 <code>epoll</code> 效率应该会更高一些。
+</p>
+
+<hr />
+
 <ul>
 <li>
-在以普通用户打开的 vim 中保存一个 root 用户文件<br/>
-    <code>:w !sudo tee %</code>
-
-<li>
-Linux 编译参数
-<pre>
-./configure --with-features=huge \
-            --enable-rubyinterp \
-            --enable-pythoninterp \
-            --enable-cscope \
-            --enable-multibyte \
-            --enable-xim \
-            --enable-fontset \
-            --enable-gui=gtk2 \
-            --with-compiledby="Your Name"
-</pre>
+<a href="http://taohui.org.cn/">陶辉的分享网站</a>
+    <a href="http://book.douban.com/subject/22793675/">《深入理解 Ningx》</a> 作者的博客，<a href="http://taohui.org.cn/category/tcp_perf/">高性能网络编程</a>系列文章，受益匪浅。
 
 </ul>
 
@@ -84,16 +84,6 @@ Linux 编译参数
 </div>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="static/highlight/highlight.pack.js"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-  $('pre').each(function(i, e) {hljs.highlightBlock(e)});
-});
-hljs.configure({
-        languages: []
-})
-hljs.initHighlightingOnLoad();
-</script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
