--- a/software-development.html
+++ b/software-development.html
@@ -52,11 +52,23 @@
 </p>
 
 <p>
-<a href="tools-for-coder.html">开发相关工具</a>
+<a href="bookmarks-tools-for-coder.html">开发相关工具书签</a>
 </p>
 
 <p>
 <a href="code.html">代码</a>
+</p>
+
+<p>
+<a href="Web.html">Web</a>
+</p>
+
+<p>
+<a href="Go.html">Go</a>
+</p>
+
+<p>
+<a href="network-programming.html">网络编程</a>
 </p>
 
     </div>
@@ -72,5 +84,18 @@
 </div>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37422134-12']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
