--- a/Vim.html
+++ b/Vim.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 <head>
-<title>Vim</title>
+<title>Vim - Noodles 的维基</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="static/css/bootstrap.min.css" media="screen" rel="stylesheet" type='text/css'>
 <link href="static/css/bootswatch.min.css" rel="stylesheet" type='text/css'>
 <link href="static/css/style.css" rel="stylesheet" type="text/css" >
-<link rel="stylesheet" href="static/highlight/styles/solarized_big.css">
+<link rel="stylesheet" href="static/highlight/styles/solarized_dark.css">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
@@ -49,7 +49,7 @@
 <a href="vimwiki.html">vimwiki</a>
 </p>
 
-<h3 id="toc_0.0.2">Tips</h3>
+<h3 id="toc_0.0.2">Vim Tips</h3>
 <ul>
 <li>
 在以普通用户打开的 vim 中保存一个 root 用户文件<br/>
@@ -82,6 +82,7 @@ Linux 编译参数
         </div>
     </footer>
 </div>
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=32074356" charset="UTF-8"></script>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="static/highlight/highlight.pack.js"></script>
