new file:   dev-tools.html 	modified:   software-development.html 	modified:   static/css/bootstrap.min.css 	modified:   things-worth-paying-for.html

--- a/software-development.html
+++ b/software-development.html
@@ -46,18 +46,6 @@
                 
 
 <p>
-<a href="Ubuntu.html">Ubuntu</a>
-</p>
-
-<p>
-<a href="Vim.html">Vim</a>
-</p>
-
-<p>
-<a href="bookmarks-tools-for-coder.html">开发相关工具书签</a>
-</p>
-
-<p>
 <a href="code.html">代码</a>
 </p>
 
@@ -71,6 +59,14 @@
 
 <p>
 <a href="network-programming.html">网络编程</a>
+</p>
+
+<p>
+<a href="Ubuntu.html">Ubuntu</a>
+</p>
+
+<p>
+<a href="dev-tools.html">工具</a>
 </p>
 
 <p>
