--- a/dev-tools.html
+++ b/dev-tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 <head>
-<title>好东西 - Noodles 的维基</title>
+<title>工具 - Noodles 的维基</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="static/css/bootstrap.min.css" media="screen" rel="stylesheet" type='text/css'>
@@ -40,34 +40,29 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <div class="page-header">
-                <h2>好东西</h2>
+                <h2>工具</h2>
             </div>
             <div class="bs-component">
                 
 
+
 <ul>
-<li>
-Mou
-
-<li>
-Wikipedia
-
-<li>
-Nginx
-
 <li>
 <a href="Vim.html">Vim</a>
 
-</ul>
-
-<ul>
 <li>
-Kindle
+vagrant
 
 <li>
-<a href="iPhone.html">iPhone</a>
+zsh
 
 </ul>
+
+<hr />
+
+<p>
+<a href="bookmarks-tools-for-coder.html">开发相关工具书签</a>
+</p>
 
             </div>
             <footer>
