--- a/bookmarks-photos.html
+++ b/bookmarks-photos.html
@@ -51,6 +51,9 @@
 <li>
 <a href="http://wallbase.cc/">Wallbase.cc</a> 太他妈时尚了这壁纸站
 
+<li>
+<a href="http://interfacelift.com">interfacelite</a> 能找到一张图各种分辨率的壁纸，从各种手机到 2880x1800 的 Retina 屏幕壁纸都有
+
 </ul>
 
                     </div>
