--- a/design.html
+++ b/design.html
@@ -42,7 +42,10 @@
 中文和英文、数字、大部分半角符号之间留空白。
 
 <li>
-中英文混排，除非是遇到完成的英文句子，其余情况一律使用全角符号。
+中英文混排，除非是遇到完整的英文句子，其余情况一律使用全角符号。
+
+<li>
+括号中全都是英文，使用半角英文括号，如果括号中有中文，则使用中文括号。
 
 <li>
 段首 <strong>不要</strong> 空两格
