--- a/Go.html
+++ b/Go.html
@@ -56,9 +56,14 @@
 </p>
 
 <h3 id="toc_0.0.1">资源</h3>
-<p>
+<ul>
+<li>
 <a href="https://github.com/codegangsta/gin">gin</a> 可以自动重新加载 Go 代码的工具
-</p>
+
+<li>
+<a href="https://github.com/golang/lint">golint</a> 检查不太规范的代码，给出修改 <strong>建议</strong>
+
+</ul>
 
                     </div>
                 </div>
