--- a/Tips.html
+++ b/Tips.html
@@ -91,6 +91,35 @@ kernel-devel.x86_64               2.6.32-431.11.2.el6                   updates
 
 </ol>
 
+
+<h3 id="toc_0.0.3">Cent OS 系统保存 iptables 规则</h3>
+<p>
+<code>sudo service iptables save</code>
+输出
+</p>
+
+<p>
+<code>iptables: Saving firewall rules to /etc/sysconfig/iptables:[  OK  ]</code>
+</p>
+
+<h3 id="toc_0.0.4">stat file</h3>
+<pre>
+Access: 2014-06-09 10:30:55.395091685 +0800
+Modify: 2014-05-16 18:23:40.151899468 +0800
+Change: 2014-05-16 18:23:40.179899469 +0800
+</pre>
+<ul>
+<li>
+Access 是文件最近一次被访问的时间
+
+<li>
+Modify 是文件内容最近一次被修改的时间
+
+<li>
+Change 是文件树形最近一次被修改的时间
+
+</ul>
+
                     </div>
                 </div>
             </article>
