--- a/bookmarks-tools-for-coder.html
+++ b/bookmarks-tools-for-coder.html
@@ -43,7 +43,7 @@
 <h3 id="toc_0.0.2">网站测速</h3>
 <ul>
 <li>
-多种测试(http, ping, dns, trace)
+多种测试 (http, ping, dns, trace)
 
 <ul>
 <li>
@@ -72,19 +72,19 @@ DNS
 <a href="http://ip138.com">IP138</a>
 
 <li>
-<a href="http://ip.cn">IP.cn</a> <code>curl ip.cn</code> 或 <code>curl ip.cn/1.1.1.1</code> 就可以获得本机外网或者指定 IP 的地理位置。到网页上去查，还有其他功能,跟 <a href="http://ip138.com">IP138</a> 功能类似
+<a href="http://ip.cn">IP.cn</a> <code>curl ip.cn</code> 或 <code>curl ip.cn/1.1.1.1</code> 就可以获得本机外网或者指定 IP 的地理位置。到网页上去查，还有其他功能，跟 <a href="http://ip138.com">IP138</a> 功能类似
 
 <li>
-界面很蹉的<a href="http://ipseeker.cn/">“IP地址探索者”</a>
+界面很蹉的<a href="http://ipseeker.cn/">“IP 地址探索者”</a>
 
 <li>
 新浪接口 <a href="http://int.dpool.sina.com.cn/iplookup/iplookup.php?format=js&amp;ip=1.1.1.1">http://int.dpool.sina.com.cn/iplookup/iplookup.php?format=js&amp;ip=1.1.1.1</a>
 
 <li>
-<a href="http://ip.taobao.com/">淘宝IP地址库</a>
+<a href="http://ip.taobao.com/">淘宝 IP 地址库</a>
 
 <li>
-<a href="http://tool.17mon.cn/">17MON网络工具集</a> <a href="http://tool.17mon.cn/ipgeo.php">IP 数据库分享计划</a>
+<a href="http://tool.17mon.cn/">17MON 网络工具集</a> <a href="http://tool.17mon.cn/ipgeo.php">IP 数据库分享计划</a>
 
 </ul>
 
