--- a/software-development.html
+++ b/software-development.html
@@ -58,6 +58,10 @@
 <a href="Tips.html">Tips</a>
 </p>
 
+<p>
+<a href="DNS.html">DNS</a>
+</p>
+
                     </div>
                 </div>
             </article>
