--- a/Ubuntu.html
+++ b/Ubuntu.html
@@ -56,6 +56,16 @@ sudo apt-get install --install-recommends linux-generic-lts-saucy xserver-xorg-l
 详情：<a href="http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system">How can I tell what package requires a reboot of my system?</a>
 </p>
 
+
+<h3 id="toc_0.0.3">安装某软件自行编译要依赖的包</h3>
+<p>
+以 <a href="nginx.html">nginx</a> 为例 <code>sudo apt-get build-deps nginx</code>
+</p>
+
+<p>
+会根据仓库里的 <a href="nginx.html">nginx</a> 的编译参数，安装所依赖的各个库和开发文件
+</p>
+
                     </div>
                 </div>
             </article>
